# Mordred-Engine

./: .gitignore  .gitmodules  LICENSE  Makefile  Mordred Engine.sln  Mordred Engine.vcxproj  README.md  build.zig  cmakelists.txt  compile.bat  main.cpp
.zig-cache/o/06dbd6b26a9ebf63db18a93a7c8f4767/: cimport.zig
.zig-cache/o/a490568160828efd0c316d46739e5852/: cimport.zig
.zig-cache/o/d154c402685512c021b7961a06fc7e31/: cimport.h  cimport.h.d
.zig-cache/tmp/: 17a4f668baa11b43-cimport.h.d
Mordred Engine/Servers/: VulkanServer.cpp  VulkanServer.h
include/Engine/Render/: OpenGLServer.hpp  renderComponents.hpp
main/: app.cpp  main.cpp
src/: CMakeLists.txt  app.cpp  main.cpp  main.zig  toolchain.cmake
src/ECS/: world.hpp
src/Engine/: engine.cpp  engine.hpp
src/Engine/Render/: OpenGLServer.cpp  OpenGLServer.hpp  components.hpp  renderComponents.hpp
src/Math/: Vector.cpp  Vector.hpp
src/Render/: GL_V_Window.cpp  GL_V_Window.hpp  Vulkan_Server.hpp
src/Shaders/: Simple_Shader.vert.glsl
src/app/: app.cpp  engine.cpp  engine.hpp
src/engine/: Engine.zig
src/engine/Data/: Engine_Schedules.zig
src/engine/ECS/: ECS.zig  Entity.zig
src/engine/Logic/: Engine.zig
src/engine/Logic/ECS/: ECS.zig  ECS_Component.zig  ECS_Entity.zig  ECS_Systems.zig  ECS_World.zig
src/engine/Logic/Memory/: AllocatorManager.zig
src/engine/Logic/Renderer/: Renderer.zig
src/engine/Logic/Renderer/Data/: Renderer_Components.zig
src/engine/Logic/Renderer/Logic/: Renderer_Device.zig  Renderer_Window.zig
src/engine/Renderer/: Window.zig
